--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -61,6 +61,7 @@ spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.idle-timeout=30000
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.connection-test-query=select 1
 
 # Redis性能配置
 # Lettuce 连接池配置
